starter-code/css/main.css
body {
  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
  margin: 0;
}

h1{
  color:#0f2f56;
  font-size: 2em;
  margin: 0;
}

header{
  height: 300px;
  background-image: url('../images/bgtile.png');
  background-repeat: repeat-x;
}

header img{
  vertical-align: middle;
}

.logo{
  position: relative;
  width: 539px;
  top: calc(50% - 39px);
  left: 47%;
  
}

button{
  padding: 10px 20px;
  box-shadow: 0px 0px 5px #3F6587;
  background-image: linear-gradient(180deg, #477298 0%, #7295B3 100%);
  border: 1px solid #335F86;
  border-radius: 2px;
  color: white;
}

button > i {
  padding-right: 5px;
}



.mockups{
  width: 50%;
  position: relative;
  float: left;
  text-align: center;
  margin-top: -210px;
}

.card{
  padding: 35px;
  position: relative;
  float: left;
  background: #FFFFFF;
  box-shadow: 0 -3px 4px 1px rgba(0,0,0,0.25);
  border-radius: 6px 6px 0 0;
  padding: 0 5% 30px;
  width: 45%;
  position: relative;
  float: left;
  margin-top: -80px;
  margin-left: -50px;
}

.descarga{
  margin-right: 20px;
}

footer{
  margin-top: 410px;
}

ol{
text-align: center;
}

li{
  display: inline;
  padding: 0 10px;
  color: #6d8fad;
  font-weight: bold;
  font-size: 14px;
}

.copy{
  padding: 0 15px;
  color: #aeaeaf;
}

